# web-power-switch

./: .gitignore  LICENSE  README.md  clean.sh  makefile  meson.build  pwrcntrl  pwrcntrl.cc
include/: webpowerswitchmanager.h
lib/: makefile  md5Helper.cc  md5Helper.h  meson.build  threadbundle.cc  threadbundle.h  tidyHelper.cc  tidyHelper.h  tidydocwrapper.cc  tidydocwrapper.h  trim.cc  trim.h  webpowerswitch.cc  webpowerswitch.h  webpowerswitchmanager.cc  webpowerswitchmanager.h
subprojects/: cxxopts.wrap
